# Alloy-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS_ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  HACKATHON_TODO.md  README.md  SETUP_FOR_JUDGES.md  pyproject.toml  railway.toml  requirements-dev.txt  requirements-production.txt  requirements.txt  test_pdf_processing.py
.github/workflows/: ci.yml  codeql.yml  docker.yml
backend/: RAG_SETUP_GUIDE.md  clean_database.py  migrate_database.py  seed_diverse_logbook.py  seed_spare_parts.py  test_all_features.py  test_conversation_history.py  test_fixes.py
backend/data/: maintenance.db-journal
backend/data/synthetic/: equipment_delay_logs.csv  equipment_failure_reports.csv  (+5 more)
data/processed/: cmapss_samples.jsonl  synthetic_samples.jsonl  uci_samples.jsonl
data/scripts/: config.py  generate_synthetic.py  process_cmapss.py  process_uci_ai4i.py  validate_and_combine.py
data/training/: train.jsonl  val.jsonl  validation_report.txt
deployment/: Dockerfile  README.md  docker-compose.yml  modal_inference.py  render.yaml  vercel.json
frontend/: .env.production  FRONTEND_README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  AppWithRouter.tsx  index.css  main.tsx
models/: MODEL_CARD.md  README.md  phi3_maintenance_training.ipynb  push_to_hub.py  requirements-training.txt  train_model.ipynb  train_phi3_colab_wandb_(1) (1).ipynb
scripts/: download_manuals.sh  scrape_manuals.py  setup_new_qdrant.py  setup_qdrant.py  test_pdf_extraction.py  upload_data.py
(+89 files in other folders)
